# meshlet_terrain_testing

./: Cargo.toml  README.md  debug_build.sh
assets/: roughness_grass_1.ktx2  terrain.gltf
src/: assets.rs  components.rs  errors.rs  main.rs  systems.rs
src/core/: colliders.rs  meshlet_scene.rs  mod.rs  serialised_meshlet_scene.rs  terrain_details.rs
