[package]
name = "meshlet_terrain_testing"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bevy
# Bevy
bevy = { version = "0.14", default-features = false, features = [
    "multi_threaded",
    "bevy_state",
    "bevy_gltf",
    "bevy_winit",
    "x11",
    "wayland",
    "png",
    "ktx2",
    "tonemapping_luts",
    "basis-universal",
    "zstd",
    "zstd",
    "serialize",
    "asset_processor",
    "dynamic_linking",
    "meshlet",
    "meshlet_processor",
] }
# Community
bevy_rapier3d = { version = "0.27", features = [
    "simd-stable",
    "serde-serialize",
] }
bevy_atmosphere = "0.10"
bevy_water = "0.14"
bevy_mod_wanderlust = { git = "https://github.com/66OJ66/bevy_mod_wanderlust.git", branch = "master" }
# Serde
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
# Error
thiserror = "1.0"
# Other
const_format = "0.2"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_info",
] }
zstd = "0.13"

[patch.crates-io]
metis = { git = "https://github.com/LIHPC-Computational-Geometry/metis-rs.git", rev = "9f3edfb" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu]
debug-assertions = false

[profile.dev.package.wgpu-hal]
debug-assertions = false

[profile.dev.package.wgpu-core]
debug-assertions = false

[profile.dev.package.wgpu-types]
debug-assertions = false
